--- a/css/customInputs/customTextInput.css
+++ b/css/customInputs/customTextInput.css
@@ -1,11 +1,3 @@
-.inputGrouping {
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: flex-end;
-  justify-content: flex-start;
-  margin-bottom: 20px;
-}
-
 .customInputText {
   display: flex;
   flex-flow: column nowrap;
@@ -14,10 +6,20 @@
   position: relative;
 }
 
+.customInputText input {
+  padding: 4px;
+  border: 1px solid #424242;
+  border-radius: 2px;
+}
+
 .customInputText .inputErrorLog {
   font-size: 10px;
   color: #F44336;
   position: absolute;
   bottom: -12px;
   left: 0;
+}
+
+.customInputText .inputErrorLog {
+  display: none;
 }
